--- a/Notebooks/SacarMúsica/Metricas.ipynb
+++ b/Notebooks/SacarMúsica/Metricas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Metricas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP0isNMALDGEESGrnZs2B59",
+      "authorship_tag": "ABX9TyOuqZez9OxGagMhCiGTFnmM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,7 +146,7 @@
         "    if 0.0 <= iou <= 1.0: return iou\n",
         "    else: return 0"
       ],
-      "execution_count": 31,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
         "      s.append(scores[i])\n",
         "  return b,l,s"
       ],
-      "execution_count": 32,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -210,36 +210,9 @@
         "  bboxsL,labelsL,scoresL = qsort([b for b in bboxs[1:] if b[0] < bbox[0]],[labels[1:][i] for i in range(0,n) if bboxs[1:][i][0] < bbox[0]],[scores[1:][i] for i in range(0,n) if bboxs[1:][i][0] < bbox[0]])\n",
         "  bboxsU,labelsU,scoresU = qsort([b for b in bboxs[1:] if b[0] >= bbox[0]],[labels[1:][i] for i in range(0,n) if bboxs[1:][i][0] >= bbox[0]],[scores[1:][i] for i in range(0,n) if bboxs[1:][i][0] >= bbox[0]])\n",
         "\n",
-        "  return bboxsL + [bbox] + bboxsU, labelsL + [label] + labelsU, scoresL + [score] + scoresU\n",
-        "\n",
-        "def pent_image2pred(test,detector):\n",
-        "  if type(test) == str:\n",
-        "    test = cv2.imread(test)\n",
-        "  Y,X,_=test.shape\n",
-        "  infer_tfms = tfms.A.Adapter([*tfms.A.resize_and_pad(size=923), tfms.A.Normalize()])\n",
-        "  infer_ds = Dataset.from_images([test], infer_tfms)\n",
-        "  infer_dl = faster_rcnn.infer_dl(infer_ds, batch_size=1)\n",
-        "  samples, preds = faster_rcnn.predict_dl(model=detector, infer_dl=infer_dl)\n",
-        "  L = []\n",
-        "  labels = list(preds[0]['labels'])\n",
-        "  bboxs = preds[0]['bboxes']\n",
-        "  for i in range(0,len(labels)):\n",
-        "    xmin=bboxs[i].xmin\n",
-        "    ymin=bboxs[i].ymin-(samples[0]['img'].shape[0]-samples[0]['height'])/2\n",
-        "    xmax=bboxs[i].xmax\n",
-        "    ymax=bboxs[i].ymax-(samples[0]['img'].shape[0]-samples[0]['height'])/2\n",
-        "    xmin=int(X*xmin/samples[0]['width'])\n",
-        "    ymin=int(Y*ymin/samples[0]['height'])\n",
-        "    xmax=int(X*xmax/samples[0]['width'])\n",
-        "    ymax=int(Y*ymax/samples[0]['height'])\n",
-        "    L.append([xmin,ymin,xmax,ymax])\n",
-        "  scores = [int(s) for s in 100*preds[0]['scores']]\n",
-        "  L,labels,scores = qsort(L,labels,scores)\n",
-        "  labels = [d[l] for l in labels]\n",
-        "  \n",
-        "  return remove_notas(L,labels,scores)"
+        "  return bboxsL + [bbox] + bboxsU, labelsL + [label] + labelsU, scoresL + [score] + scoresU"
       ],
-      "execution_count": 33,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -271,7 +244,7 @@
         "\n",
         "args = parser.parse_args()"
       ],
-      "execution_count": 34,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -531,7 +504,7 @@
         "    # close the plot\n",
         "    plt.close()"
       ],
-      "execution_count": 35,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1159,7 +1132,7 @@
         "          )\n",
         "  return sum_AP*100"
       ],
-      "execution_count": 36,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1181,7 +1154,7 @@
         "%mkdir 'input/ground-truth'\n",
         "%mkdir 'input/detection-results'"
       ],
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1193,7 +1166,7 @@
         "path=Path('dataset/test')\n",
         "files = get_files(path, folders = ['images'])"
       ],
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1213,7 +1186,7 @@
         "    txt.write(label + ' ' + str(x) + ' ' + str(y) + ' '+ str(z) + ' '+ str(w) +'\\n')\n",
         "  txt.close()"
       ],
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1233,6 +1206,42 @@
       "source": [
         "### Faster-CRNN"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8A8uLJ-zwRoX"
+      },
+      "source": [
+        "def pent_image2pred(test,detector):\n",
+        "  if type(test) == str:\n",
+        "    test = cv2.imread(test)\n",
+        "  Y,X,_=test.shape\n",
+        "  infer_tfms = tfms.A.Adapter([*tfms.A.resize_and_pad(size=923), tfms.A.Normalize()])\n",
+        "  infer_ds = Dataset.from_images([test], infer_tfms)\n",
+        "  infer_dl = faster_rcnn.infer_dl(infer_ds, batch_size=1)\n",
+        "  samples, preds = faster_rcnn.predict_dl(model=detector, infer_dl=infer_dl)\n",
+        "  L = []\n",
+        "  labels = list(preds[0]['labels'])\n",
+        "  bboxs = preds[0]['bboxes']\n",
+        "  for i in range(0,len(labels)):\n",
+        "    xmin=bboxs[i].xmin\n",
+        "    ymin=bboxs[i].ymin-(samples[0]['img'].shape[0]-samples[0]['height'])/2\n",
+        "    xmax=bboxs[i].xmax\n",
+        "    ymax=bboxs[i].ymax-(samples[0]['img'].shape[0]-samples[0]['height'])/2\n",
+        "    xmin=int(X*xmin/samples[0]['width'])\n",
+        "    ymin=int(Y*ymin/samples[0]['height'])\n",
+        "    xmax=int(X*xmax/samples[0]['width'])\n",
+        "    ymax=int(Y*ymax/samples[0]['height'])\n",
+        "    L.append([xmin,ymin,xmax,ymax])\n",
+        "  scores = [int(s) for s in 100*preds[0]['scores']]\n",
+        "  L,labels,scores = qsort(L,labels,scores)\n",
+        "  labels = [d[l] for l in labels]\n",
+        "  \n",
+        "  return remove_notas(L,labels,scores)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1465,7 +1474,7 @@
         "  \n",
         "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1478,7 +1487,7 @@
         "state_dict = torch.load('efficientdet.pth')\n",
         "efficent = efficientdet.model(model_name=\"tf_efficientdet_d3\", num_classes=35, img_size=512)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1493,7 +1502,7 @@
       "source": [
         "efficent.load_state_dict(state_dict)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1518,7 +1527,7 @@
         "path=Path('dataset/test')\n",
         "files = get_files(path, folders = ['images'])"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1538,7 +1547,7 @@
         "    txt.write(label + ' ' +str(conf) + ' '+ str(x) + ' ' + str(y) + ' '+ str(z) + ' '+ str(w) +'\\n')\n",
         "  txt.close()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1553,7 +1562,7 @@
       "source": [
         "mAP()"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1642,7 +1651,7 @@
         "print('f1 score: ',f1)\n",
         "print('coco metric: ',0.1556851971563123)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1652,6 +1661,240 @@
             "recall:  0.14217577353522054\n",
             "f1 score:  0.16192609010472164\n",
             "coco metric:  0.1556851971563123\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oqxaK3J6vxcV"
+      },
+      "source": [
+        "### RetinaNet"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TCeR-4L7v0eK"
+      },
+      "source": [
+        "def pent_image2pred(test,detector):\n",
+        "  if type(test) == str:\n",
+        "    test = cv2.imread(test)\n",
+        "  Y,X,_=test.shape\n",
+        "  infer_tfms = tfms.A.Adapter([*tfms.A.resize_and_pad(size=923), tfms.A.Normalize()])\n",
+        "  infer_ds = Dataset.from_images([test], infer_tfms)\n",
+        "  infer_dl = retinanet.infer_dl(infer_ds, batch_size=1)\n",
+        "  samples, preds = retinanet.predict_dl(model=detector, infer_dl=infer_dl)\n",
+        "  L = []\n",
+        "  labels = list(preds[0]['labels'])\n",
+        "  bboxs = preds[0]['bboxes']\n",
+        "  for i in range(0,len(labels)):\n",
+        "    xmin=bboxs[i].xmin\n",
+        "    ymin=bboxs[i].ymin-(samples[0]['img'].shape[0]-samples[0]['height'])/2\n",
+        "    xmax=bboxs[i].xmax\n",
+        "    ymax=bboxs[i].ymax-(samples[0]['img'].shape[0]-samples[0]['height'])/2\n",
+        "    xmin=int(X*xmin/samples[0]['width'])\n",
+        "    ymin=int(Y*ymin/samples[0]['height'])\n",
+        "    xmax=int(X*xmax/samples[0]['width'])\n",
+        "    ymax=int(Y*ymax/samples[0]['height'])\n",
+        "    L.append([xmin,ymin,xmax,ymax])\n",
+        "  scores = [int(s) for s in 100*preds[0]['scores']]\n",
+        "  L,labels,scores = qsort(L,labels,scores)\n",
+        "  labels = [d[l] for l in labels]\n",
+        "  \n",
+        "  return remove_notas(L,labels,scores)"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-8Mj6NP1wcuY"
+      },
+      "source": [
+        "%%capture\n",
+        "state_dict = torch.load('RetinaNet.pth')\n",
+        "retina = retinanet.model(num_classes=35)"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TTZYuuNXwcui",
+        "outputId": "3ea7762a-477c-4fcb-b2a0-a0f1f28f5358"
+      },
+      "source": [
+        "retina.load_state_dict(state_dict)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_Hxk2tcWwcuj"
+      },
+      "source": [
+        "path=Path('dataset/test')\n",
+        "files = get_files(path, folders = ['images'])"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a4LonRk8wcuk"
+      },
+      "source": [
+        "%%capture\n",
+        "for f in files:\n",
+        "  bboxs,labels,confs = pent_image2pred(str(f),detector=retina)\n",
+        "  txt=open('input/detection-results/'+f.stem+'.txt','w')\n",
+        "  for i in range(0,len(labels)):\n",
+        "    label = labels[i]\n",
+        "    x,y,z,w = bboxs[i]\n",
+        "    conf=confs[i]\n",
+        "    txt.write(label + ' ' +str(conf) + ' '+ str(x) + ' ' + str(y) + ' '+ str(z) + ' '+ str(w) +'\\n')\n",
+        "  txt.close()"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uIqOci8Owcul",
+        "outputId": "faf8e2fc-7d29-49fc-ad97-ad48784a0ef9"
+      },
+      "source": [
+        "mAP()"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.00% = 2x4 AP \n",
+            "0.00% = 3 AP \n",
+            "0.00% = 3x2 AP \n",
+            "0.00% = 3x4 AP \n",
+            "2.02% = 4x4 AP \n",
+            "0.00% = 6x8 AP \n",
+            "0.00% = P1 AP \n",
+            "0.00% = bec AP \n",
+            "0.00% = bem AP \n",
+            "0.00% = check AP \n",
+            "100.00% = claved AP \n",
+            "0.00% = clavef AP \n",
+            "100.00% = claves AP \n",
+            "0.00% = liga AP \n",
+            "0.00% = line AP \n",
+            "53.96% = nota1 AP \n",
+            "46.95% = nota1:2 AP \n",
+            "3.21% = nota1:4 AP \n",
+            "2.51% = nota2 AP \n",
+            "0.00% = nota4 AP \n",
+            "0.00% = notae AP \n",
+            "0.00% = punt AP \n",
+            "99.22% = sil0 AP \n",
+            "0.00% = sil1 AP \n",
+            "0.00% = sil1:2 AP \n",
+            "0.00% = sil1:4 AP \n",
+            "4.55% = sil2 AP \n",
+            "0.00% = sos AP \n",
+            "mAP = 14.73%\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "412.4061854132503"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R3_ZddIjwcul",
+        "outputId": "f5bf9265-62ff-42f8-a533-51ff3d86df32"
+      },
+      "source": [
+        "txt=open('/content/output/output.txt','r')\n",
+        "linea=txt.readline()\n",
+        "gt={}\n",
+        "dt={}\n",
+        "while linea!= '# Number of ground-truth objects per class\\n':\n",
+        "  linea=txt.readline()\n",
+        "  if 'mAP =' in linea: print(linea[:-1])\n",
+        "for i in range(0,28): # número de clases en test\n",
+        "  a = txt.readline().split()\n",
+        "  gt[a[0]]= a[1]    \n",
+        "txt.readline()\n",
+        "txt.readline()\n",
+        "a = txt.readline().split()\n",
+        "while a!= []:\n",
+        "  dt[a[0]]=a[1:]\n",
+        "  a = txt.readline().split()\n",
+        "\n",
+        "for key in gt.keys():\n",
+        "  if key not in dt.keys(): dt[key]=['0', '(tp:0,', 'fp:0)']\n",
+        "\n",
+        "precision= np.sum([float(dt[i][1][4:-1])/(float(dt[i][1][4:-1])+float(dt[i][2][3:-1])) for i in dt if dt[i][1][4:-1] != '0'])/28\n",
+        "print('precision: ',precision)\n",
+        "recall=stats.mean([float(dt[i][1][4:-1])/float(gt[i])  for i in dt])\n",
+        "print('recall: ',recall)\n",
+        "f1 = (2*precision*recall)/(precision+recall)\n",
+        "print('f1 score: ',f1)\n",
+        "print('coco metric: ',0.19078868884727085)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "mAP = 14.73%\n",
+            "precision:  0.2359325856966163\n",
+            "recall:  0.15412512482646118\n",
+            "f1 score:  0.18645004695513814\n",
+            "coco metric:  0.19078868884727085\n"
           ],
           "name": "stdout"
         }
