--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNhv31fOmfBm3aQTvBLg9fc",
+      "authorship_tag": "ABX9TyO/3icwLPXb06O/5peSuzHg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -910,11 +910,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "e9evCGFuwj1F",
-        "outputId": "908d8882-9b82-4189-a972-37440e8fffa7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "outputId": "908d8882-9b82-4189-a972-37440e8fffa7"
       },
       "source": [
         "data = image2data(Obra,model='yolo')\n",
@@ -4407,11 +4407,11 @@
         "    lyric = ET.SubElement(note,'lyric')\n",
         "    syllabic = ET.SubElement(lyric,'syllabic')\n",
         "    syllabic.text = 'single'\n",
-        "    texto = ET.SubElement(note,'text')\n",
+        "    texto = ET.SubElement(lyric,'text')\n",
         "    texto.text = atributos['text']\n",
         "  return mydata"
       ],
-      "execution_count": 141,
+      "execution_count": 163,
       "outputs": []
     },
     {
@@ -4436,7 +4436,7 @@
         "    dot = ET.SubElement(note,'dot')\n",
         "  return mydata"
       ],
-      "execution_count": 142,
+      "execution_count": 164,
       "outputs": []
     },
     {
@@ -4467,7 +4467,7 @@
         "    pass \n",
         "  return mydata"
       ],
-      "execution_count": 143,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -4491,14 +4491,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B00nBKYc5Qs4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B00nBKYc5Qs4",
+        "outputId": "27f3767a-588e-4181-dfed-61a0b6980a88"
       },
       "source": [
         "import music21\n",
         "%mkdir output"
       ],
-      "execution_count": 148,
-      "outputs": []
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "mkdir: cannot create directory ‘output’: File exists\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -4603,7 +4615,7 @@
         "  c = music21.converter.parse('output/predict.xml')\n",
         "  c.write('midi','output/predict.mid')"
       ],
-      "execution_count": 160,
+      "execution_count": 167,
       "outputs": []
     },
     {
