--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOPe/l4T5YT/5Quz2qD8Haw",
+      "authorship_tag": "ABX9TyOwqv8E4Q6xLIUzD6ROzqju",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1053,7 +1053,7 @@
         "%%capture\n",
         "pip install py_midicsv"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1065,7 +1065,7 @@
         "%%capture\n",
         "pip install MIDIUtil"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1077,7 +1077,7 @@
         "%%capture\n",
         "pip install pretty_midi"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1089,7 +1089,7 @@
         "%%capture\n",
         "!pip install icevision[all]==0.5.1"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1101,7 +1101,7 @@
         "%%capture\n",
         "!pip install torchtext==0.8.1"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1113,7 +1113,7 @@
         "%%capture\n",
         "!pip install fastai --upgrade"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1128,7 +1128,7 @@
         "!pip install pytesseract\n",
         "!pip install tesseract"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1182,7 +1182,7 @@
         "!apt-get install tree\n",
         "%cd .."
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1195,7 +1195,7 @@
         "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
         "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1224,7 +1224,7 @@
         "!unzip Fotos.zip\n",
         "!unzip datasetYOLO.zip"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1238,7 +1238,7 @@
         "with open(\"ini_Obras.pickle\", \"rb\") as f:\n",
         "    ini_Obras = pickle.load(f)"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1255,7 +1255,7 @@
         "  ax.yaxis.set_ticklabels([])\n",
         "  plt.show()"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1275,7 +1275,7 @@
         "    reparsed = minidom.parseString(rough_string)\n",
         "    return reparsed.toprettyxml(indent=\"  \")"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1308,7 +1308,7 @@
         "    else: return 0\n",
         "  else: return 0"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1336,7 +1336,7 @@
         "    assert iou <= 1.0\n",
         "    return iou"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1378,7 +1378,7 @@
         "      s.append(scores[i])\n",
         "  return b,l,s"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1464,7 +1464,7 @@
         "  labels = [d[l] for l in labels]\n",
         "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1548,7 +1548,7 @@
         "        k+=1\n",
         "  return data"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1585,7 +1585,7 @@
         "      pents.append((x-5,y-5,926,117))\n",
         "  return pents[::-1]"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1613,7 +1613,7 @@
         "      cv2.rectangle(foto2, (x, y), (x + w, y + h), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1647,7 +1647,7 @@
         "      bloques.append((x,y,w,h))\n",
         "  return bloques[::-1]"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1671,7 +1671,7 @@
         "      cv2.rectangle(foto2, (x, y-3), (x + w, y + h+3), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1702,7 +1702,7 @@
         "state_dict = torch.load('faster.pth')\n",
         "faster = faster_rcnn.model(num_classes=35)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1717,7 +1717,7 @@
       "source": [
         "faster.load_state_dict(state_dict)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1752,7 +1752,7 @@
         "state_dict = torch.load('efficientdet.pth')\n",
         "efficent = efficientdet.model(model_name=\"tf_efficientdet_d3\", num_classes=35, img_size=512)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1767,7 +1767,7 @@
       "source": [
         "efficent.load_state_dict(state_dict)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1802,7 +1802,7 @@
         "state_dict = torch.load('RetinaNet.pth')\n",
         "retina = retinanet.model(num_classes=35)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1817,7 +1817,7 @@
       "source": [
         "retina.load_state_dict(state_dict)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1851,7 +1851,7 @@
         "%%capture\n",
         "altura_notas = load_learner('export.pkl')"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1886,7 +1886,7 @@
         "Obra = np.concatenate(Obra,axis=0)\n",
         "mostrarImagen(Obra)"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1937,7 +1937,7 @@
         "          'C3':{-4:'G2', -3:'A2', -2:'B2', -1:'C3', 0:'D3', 1:'E3', 2:'F3', 3:'G3', 4:'A3', 5:'B3', 6:'C4', 7:'D4', 8:'E4', 9:'F4', 10:'G4', 11:'A4', 12:'B4', 13:'C5', 14:'D5'},\n",
         "          'C4':{-4:'E2', -3:'F2', -2:'G2', -1:'A2', 0:'B2', 1:'C3', 2:'D3', 3:'E3', 4:'F3', 5:'G3', 6:'A3', 7:'B3', 8:'C4', 9:'D4', 10:'E4', 11:'F4', 12:'G4', 13:'A4', 14:'B4'}}"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1948,7 +1948,7 @@
       "source": [
         "nombres={'background':'background','claved1':'C1', 'claved3':'C3', 'claved4': 'C4', 'claves':'G2', 'clavef':'F4', 'nota1':'quarter', 'nota2':'half', 'nota4':'whole', 'nota1:2':'eighth', 'nota1:4':'16th', 'notae':'grace', 'sos':'sharp', 'bem':'flat', 'bec':'natural', 'sil0':'multiple-rest', 'sil1':'quarter', 'sil2':'half', 'sil1:2':'eighth', 'sil1:4':'16th', '2x4':'2x4', '3x4':'3x4', '4x4':'4x4', '6x8':'6x8', 'punt':'dot', 'liga':'beam','3':'tuplet','line':'measure','P2':'P2', 'nota1:8':'32nd', 'cal':'cal', '3x2':'3x2','mf':'mf','P1':'P1','check':'check','3x8':'3x8','2x2':'2x2'}"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1959,7 +1959,7 @@
       "source": [
         "duration = {'32nd':'1','16th':'2','eighth':'4','quarter':'8','half':'16','whole':'32'}"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2036,7 +2036,7 @@
         "  part.set('id','P1')\n",
         "  return score_partwise"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2080,7 +2080,7 @@
         "    measure = ET.SubElement(part,'measure')\n",
         "  return mydata"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2129,7 +2129,7 @@
         "    texto.text = atributos['text']\n",
         "  return mydata"
       ],
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2154,7 +2154,7 @@
         "    dot = ET.SubElement(note,'dot')\n",
         "  return mydata"
       ],
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2185,7 +2185,7 @@
         "    pass \n",
         "  return mydata"
       ],
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2219,7 +2219,7 @@
         "import music21\n",
         "%mkdir output"
       ],
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2273,6 +2273,7 @@
         "    if fifths == 0: Tonos = []\n",
         "    if fifths < 0: Tonos = B_F[:-fifths]\n",
         "    if fifths > 0: Tonos = B_F[:fifths]\n",
+        "    n,k = len(L),0\n",
         "    for l in L:\n",
         "      step_anterior = []\n",
         "      if 'nota' in l:\n",
@@ -2310,6 +2311,7 @@
         "        atributos['alter'] = alter\n",
         "        mydata = add_note(mydata,atributos)\n",
         "      if 'line' == l:\n",
+        "      #if 'line == l and k < n-1: esta es mejor para el sonido ya que si hay compás vacio añade silencio y no lo queremos así\n",
         "        mydata = add_measure(mydata)\n",
         "        step_anterior = []\n",
         "      if 'sil' in l:\n",
@@ -2320,13 +2322,15 @@
         "          atributos['punt'] = True\n",
         "          atributos['duration'] = str(int(atributos['duration']) + int(atributos['duration'])//2)\n",
         "        mydata = add_rest(mydata,atributos)\n",
+        "      k = k + 1\n",
+        "      \n",
         "  mydata = prettify(mydata)\n",
         "  with open(\"output/predict.xml\", \"w\") as myfile:\n",
         "    myfile.write(mydata)\n",
         "  c = music21.converter.parse('output/predict.xml')\n",
         "  c.write('midi','output/predict.mid')"
       ],
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2377,7 +2381,7 @@
       "source": [
         "image2xml(Obra,model='retina')"
       ],
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2568,7 +2572,7 @@
         "audio_data = midi_data.synthesize(fs=Fs)\n",
         "ipd.Audio(audio_data, rate=Fs)"
       ],
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
