--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOGejX53bQ+Gj2Z7y78s/Y2",
+      "authorship_tag": "ABX9TyO0Cs+FseaIh7W6tVuIDlFj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "%%capture\n",
         "pip install py_midicsv"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
         "%%capture\n",
         "pip install MIDIUtil"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
         "%%capture\n",
         "pip install pretty_midi"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
         "%%capture\n",
         "!pip install icevision[all]==0.5.1"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +104,7 @@
         "%%capture\n",
         "!pip install torchtext==0.8.1"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
         "%%capture\n",
         "!pip install fastai --upgrade"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
         "!pip install pytesseract\n",
         "!pip install tesseract"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
         "import json\n",
         "import music21 as m21"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +185,7 @@
         "!apt-get install tree\n",
         "%cd .."
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +198,7 @@
         "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
         "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "!unzip Fotos.zip\n",
         "!unzip datasetYOLO.zip"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -241,7 +241,7 @@
         "with open(\"ini_Obras.pickle\", \"rb\") as f:\n",
         "    ini_Obras = pickle.load(f)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +258,7 @@
         "  ax.yaxis.set_ticklabels([])\n",
         "  plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -278,7 +278,7 @@
         "    reparsed = minidom.parseString(rough_string)\n",
         "    return reparsed.toprettyxml(indent=\"  \")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -311,7 +311,7 @@
         "    else: return 0\n",
         "  else: return 0"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
         "    else: return 0\n",
         "  else: return 0"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
         "      s.append(scores[i])\n",
         "  return b,l,s"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -489,7 +489,7 @@
         "  labels = [d[l] for l in labels]\n",
         "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -550,6 +550,7 @@
         "          pent = cv2.dilate(pent,kernel,iterations=1)\n",
         "          cnts,_ = cv2.findContours(pent, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
         "          k = 1\n",
+        "          altura = 1\n",
         "          distancia_min = 1000\n",
         "          for c in cnts:\n",
         "            _,y2,_,_ = cv2.boundingRect(c)\n",
@@ -596,7 +597,7 @@
         "      (x, y, w, h) = cv2.boundingRect(c) # Mejor sacar el rectángulo contenido\n",
         "      xmin,ymin,xmax,ymax = max(0,x-5),max(0,y-5),min(x+w+5,Obra.shape[1]),min(y+h+5,Obra.shape[0])\n",
         "      cadena = pytesseract.image_to_string(Obra[ymin:ymax,xmin:xmax],lang=\"spa\")\n",
-        "      if h < 28:\n",
+        "      if h < 28 and len(alts_pents) > 0:\n",
         "        alts = [abs(p-y) for p in alts_pents]\n",
         "        index_pent = alts.index(min(alts)) + 1\n",
         "        n = len(data['pent_'+str(index_pent)]['labels'])\n",
@@ -610,7 +611,7 @@
         "        k+=1\n",
         "  return data"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -647,7 +648,7 @@
         "      pents.append((x-5,y-5,926,117))\n",
         "  return pents[::-1]"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -675,7 +676,7 @@
         "      cv2.rectangle(foto2, (x, y), (x + w, y + h), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -709,7 +710,7 @@
         "      bloques.append((x,y,w,h))\n",
         "  return bloques[::-1]"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -733,7 +734,7 @@
         "      cv2.rectangle(foto2, (x, y-3), (x + w, y + h+3), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -764,7 +765,7 @@
         "state_dict = torch.load('faster.pth')\n",
         "faster = faster_rcnn.model(num_classes=35)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -779,7 +780,7 @@
       "source": [
         "faster.load_state_dict(state_dict)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -814,7 +815,7 @@
         "state_dict = torch.load('efficientdet.pth')\n",
         "efficent = efficientdet.model(model_name=\"tf_efficientdet_d3\", num_classes=35, img_size=512)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -829,7 +830,7 @@
       "source": [
         "efficent.load_state_dict(state_dict)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -864,7 +865,7 @@
         "state_dict = torch.load('RetinaNet.pth')\n",
         "retina = retinanet.model(num_classes=35)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -879,7 +880,7 @@
       "source": [
         "retina.load_state_dict(state_dict)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -913,7 +914,7 @@
         "%%capture\n",
         "altura_notas = load_learner('export.pkl')"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -948,7 +949,7 @@
         "Obra = np.concatenate(Obra,axis=0)\n",
         "mostrarImagen(Obra)"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -988,7 +989,7 @@
       "source": [
         "print(data)"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,7 +1022,7 @@
         "          'C3':{-4:'G2', -3:'A2', -2:'B2', -1:'C3', 0:'D3', 1:'E3', 2:'F3', 3:'G3', 4:'A3', 5:'B3', 6:'C4', 7:'D4', 8:'E4', 9:'F4', 10:'G4', 11:'A4', 12:'B4', 13:'C5', 14:'D5'},\n",
         "          'C4':{-4:'E2', -3:'F2', -2:'G2', -1:'A2', 0:'B2', 1:'C3', 2:'D3', 3:'E3', 4:'F3', 5:'G3', 6:'A3', 7:'B3', 8:'C4', 9:'D4', 10:'E4', 11:'F4', 12:'G4', 13:'A4', 14:'B4'}}"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1032,7 +1033,7 @@
       "source": [
         "nombres={'background':'background','claved1':'C1', 'claved3':'C3', 'claved4': 'C4', 'claves':'G2', 'clavef':'F4', 'nota1':'quarter', 'nota2':'half', 'nota4':'whole', 'nota1:2':'eighth', 'nota1:4':'16th', 'notae':'32nd', 'sos':'sharp', 'bem':'flat', 'bec':'natural', 'sil0':'whole', 'sil1':'quarter', 'sil2':'half', 'sil1:2':'eighth', 'sil1:4':'16th', '2x4':'2x4', '3x4':'3x4', '4x4':'4x4', '6x8':'6x8', 'punt':'dot', 'liga':'beam','3':'tuplet','line':'measure','P2':'P2', 'nota1:8':'32nd', 'cal':'cal', '3x2':'3x2','mf':'mf','P1':'P1','check':'check','3x8':'3x8','2x2':'2x2'}"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1043,7 +1044,7 @@
       "source": [
         "duration = {'32nd':'1','16th':'2','eighth':'4','quarter':'8','half':'16','whole':'32'}"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1120,7 +1121,7 @@
         "  part.set('id','P1')\n",
         "  return score_partwise"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1164,7 +1165,7 @@
         "    measure = ET.SubElement(part,'measure')\n",
         "  return mydata"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1225,7 +1226,7 @@
         "    texto.text = atributos['text']\n",
         "  return mydata"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1250,7 +1251,7 @@
         "    dot = ET.SubElement(note,'dot')\n",
         "  return mydata"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1261,7 +1262,7 @@
       "source": [
         "def add_texto(mydata,atributos): # Sol el texto de las descripciones\n",
         "  if atributos['tipo'] == 1:\n",
-        "    texto = atributos['texto'].replace('\\n\\x0c','').split('\\n')\n",
+        "    texto = atributos['texto'].replace('\\n\\x0c','').replace('\\x0c','').split('\\n')\n",
         "    n = len(texto)\n",
         "    for i in range(0,n):\n",
         "      if i == 0: d = '100'\n",
@@ -1281,7 +1282,7 @@
         "    pass \n",
         "  return mydata"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1314,7 +1315,7 @@
         "%mkdir output/midi\n",
         "%mkdir output/jpg"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1423,7 +1424,7 @@
         "  c = music21.converter.parse(\"output/xml/obra\"+str(id)+\".xml\")\n",
         "  c.write('midi',\"output/midi/obra\"+str(id)+\".mid\")"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
