--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO0Cs+FseaIh7W6tVuIDlFj",
+      "authorship_tag": "ABX9TyNv7Av111/Uc+OW6rkMINHv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "%%capture\n",
         "pip install py_midicsv"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
         "%%capture\n",
         "pip install MIDIUtil"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
         "%%capture\n",
         "pip install pretty_midi"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
         "%%capture\n",
         "!pip install icevision[all]==0.5.1"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -104,7 +104,7 @@
         "%%capture\n",
         "!pip install torchtext==0.8.1"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
         "%%capture\n",
         "!pip install fastai --upgrade"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
         "!pip install pytesseract\n",
         "!pip install tesseract"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
         "import json\n",
         "import music21 as m21"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -185,7 +185,7 @@
         "!apt-get install tree\n",
         "%cd .."
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -198,7 +198,7 @@
         "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
         "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "!unzip Fotos.zip\n",
         "!unzip datasetYOLO.zip"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -241,7 +241,7 @@
         "with open(\"ini_Obras.pickle\", \"rb\") as f:\n",
         "    ini_Obras = pickle.load(f)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -258,7 +258,7 @@
         "  ax.yaxis.set_ticklabels([])\n",
         "  plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -278,7 +278,7 @@
         "    reparsed = minidom.parseString(rough_string)\n",
         "    return reparsed.toprettyxml(indent=\"  \")"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -311,7 +311,7 @@
         "    else: return 0\n",
         "  else: return 0"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -339,7 +339,7 @@
         "    assert iou <= 1.0\n",
         "    return iou"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
         "    else: return 0\n",
         "  else: return 0"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
         "      s.append(scores[i])\n",
         "  return b,l,s"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -489,7 +489,7 @@
         "  labels = [d[l] for l in labels]\n",
         "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -611,7 +611,7 @@
         "        k+=1\n",
         "  return data"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -648,7 +648,7 @@
         "      pents.append((x-5,y-5,926,117))\n",
         "  return pents[::-1]"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -676,7 +676,7 @@
         "      cv2.rectangle(foto2, (x, y), (x + w, y + h), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -710,7 +710,7 @@
         "      bloques.append((x,y,w,h))\n",
         "  return bloques[::-1]"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -734,7 +734,7 @@
         "      cv2.rectangle(foto2, (x, y-3), (x + w, y + h+3), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -765,7 +765,7 @@
         "state_dict = torch.load('faster.pth')\n",
         "faster = faster_rcnn.model(num_classes=35)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -775,12 +775,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "07834d21-14d8-415a-e44f-e68beea108a0"
+        "outputId": "e2d9046d-bc57-43dd-a158-3a5ec5ae16c1"
       },
       "source": [
         "faster.load_state_dict(state_dict)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -792,7 +792,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 19
         }
       ]
     },
@@ -815,7 +815,7 @@
         "state_dict = torch.load('efficientdet.pth')\n",
         "efficent = efficientdet.model(model_name=\"tf_efficientdet_d3\", num_classes=35, img_size=512)"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -825,12 +825,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "22981d01-b7b0-4731-dcb9-f3d4103d5348"
+        "outputId": "68325efd-5295-4997-df2f-988b11414b92"
       },
       "source": [
         "efficent.load_state_dict(state_dict)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -842,7 +842,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 21
         }
       ]
     },
@@ -865,7 +865,7 @@
         "state_dict = torch.load('RetinaNet.pth')\n",
         "retina = retinanet.model(num_classes=35)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -875,12 +875,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bfe02095-a36a-42fd-8114-387c5bb77cf0"
+        "outputId": "a91f74f5-f534-40a3-fccf-d264cb1f4e9b"
       },
       "source": [
         "retina.load_state_dict(state_dict)"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -892,7 +892,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 23
         }
       ]
     },
@@ -914,7 +914,7 @@
         "%%capture\n",
         "altura_notas = load_learner('export.pkl')"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1022,7 +1022,7 @@
         "          'C3':{-4:'G2', -3:'A2', -2:'B2', -1:'C3', 0:'D3', 1:'E3', 2:'F3', 3:'G3', 4:'A3', 5:'B3', 6:'C4', 7:'D4', 8:'E4', 9:'F4', 10:'G4', 11:'A4', 12:'B4', 13:'C5', 14:'D5'},\n",
         "          'C4':{-4:'E2', -3:'F2', -2:'G2', -1:'A2', 0:'B2', 1:'C3', 2:'D3', 3:'E3', 4:'F3', 5:'G3', 6:'A3', 7:'B3', 8:'C4', 9:'D4', 10:'E4', 11:'F4', 12:'G4', 13:'A4', 14:'B4'}}"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1033,7 +1033,7 @@
       "source": [
         "nombres={'background':'background','claved1':'C1', 'claved3':'C3', 'claved4': 'C4', 'claves':'G2', 'clavef':'F4', 'nota1':'quarter', 'nota2':'half', 'nota4':'whole', 'nota1:2':'eighth', 'nota1:4':'16th', 'notae':'32nd', 'sos':'sharp', 'bem':'flat', 'bec':'natural', 'sil0':'whole', 'sil1':'quarter', 'sil2':'half', 'sil1:2':'eighth', 'sil1:4':'16th', '2x4':'2x4', '3x4':'3x4', '4x4':'4x4', '6x8':'6x8', 'punt':'dot', 'liga':'beam','3':'tuplet','line':'measure','P2':'P2', 'nota1:8':'32nd', 'cal':'cal', '3x2':'3x2','mf':'mf','P1':'P1','check':'check','3x8':'3x8','2x2':'2x2'}"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1044,7 +1044,7 @@
       "source": [
         "duration = {'32nd':'1','16th':'2','eighth':'4','quarter':'8','half':'16','whole':'32'}"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1121,7 +1121,7 @@
         "  part.set('id','P1')\n",
         "  return score_partwise"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1165,7 +1165,7 @@
         "    measure = ET.SubElement(part,'measure')\n",
         "  return mydata"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1226,7 +1226,7 @@
         "    texto.text = atributos['text']\n",
         "  return mydata"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1251,7 +1251,7 @@
         "    dot = ET.SubElement(note,'dot')\n",
         "  return mydata"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1282,7 +1282,7 @@
         "    pass \n",
         "  return mydata"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1424,7 +1424,7 @@
         "  c = music21.converter.parse(\"output/xml/obra\"+str(id)+\".xml\")\n",
         "  c.write('midi',\"output/midi/obra\"+str(id)+\".mid\")"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1439,21 +1439,12 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "vFT3MO51G055"
-      },
-      "source": [
-        "- **Vamos por este autor: Calahorra, Remigio**"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "TeD7G3kRlPZB"
       },
       "source": [
-        "for a in Obras_final:\n",
+        "for a in list(Obras_final.keys())[135:185]:\n",
         "  print('')\n",
         "  print(a)\n",
         "  for id in Obras_final[a]:\n",
@@ -1470,6 +1461,18 @@
         "    Obra = np.concatenate(Obra,axis=0)\n",
         "    image2xml(Obra,id=id,model='yolo')\n",
         "    cv2.imwrite(\"output/jpg/obra\"+str(id)+\".jpg\",Obra)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UjnVmut53PeW"
+      },
+      "source": [
+        "import shutil\n",
+        "shutil.make_archive('output', 'zip', '/content/output')"
       ],
       "execution_count": null,
       "outputs": []
