--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNv7Av111/Uc+OW6rkMINHv",
+      "authorship_tag": "ABX9TyMQa3YeMdzjiqi5I7mJMFgF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -775,7 +775,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e2d9046d-bc57-43dd-a158-3a5ec5ae16c1"
+        "outputId": "e7e3fca0-cd13-4343-fbdc-a3f32b0e218c"
       },
       "source": [
         "faster.load_state_dict(state_dict)"
@@ -825,7 +825,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "68325efd-5295-4997-df2f-988b11414b92"
+        "outputId": "b2f5d665-b5ac-48c2-9b9d-a23662193c92"
       },
       "source": [
         "efficent.load_state_dict(state_dict)"
@@ -875,7 +875,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a91f74f5-f534-40a3-fccf-d264cb1f4e9b"
+        "outputId": "e0986d23-4336-4fc6-8061-a53c36d3e2d1"
       },
       "source": [
         "retina.load_state_dict(state_dict)"
@@ -1310,12 +1310,12 @@
       },
       "source": [
         "import music21\n",
-        "%mkdir output\n",
-        "%mkdir output/xml\n",
-        "%mkdir output/midi\n",
-        "%mkdir output/jpg"
+        "#%mkdir output\n",
+        "#%mkdir output/xml\n",
+        "#%mkdir output/midi\n",
+        "#%mkdir output/jpg"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1353,7 +1353,8 @@
         "      L = data[e]['labels'][:n+1]\n",
         "      inicio['fifths'] = -len([l for l in L if l == 'bem']) + len([l for l in L if l == 'sos'])\n",
         "      fifths = inicio['fifths']\n",
-        "      inicio['clef'] = nombres[[l for l in L if 'clave' in l][0]]\n",
+        "      if len([l for l in L if 'clave' in l]) > 0:\n",
+        "        inicio['clef'] = nombres[[l for l in L if 'clave' in l][0]]\n",
         "      clave = inicio['clef']\n",
         "      inicio['compas'] = L[-1]\n",
         "      mydata = add_measure(mydata,inicio)\n",
@@ -1424,7 +1425,7 @@
         "  c = music21.converter.parse(\"output/xml/obra\"+str(id)+\".xml\")\n",
         "  c.write('midi',\"output/midi/obra\"+str(id)+\".mid\")"
       ],
-      "execution_count": 34,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1444,7 +1445,7 @@
         "id": "TeD7G3kRlPZB"
       },
       "source": [
-        "for a in list(Obras_final.keys())[135:185]:\n",
+        "for a in Obras_final:\n",
         "  print('')\n",
         "  print(a)\n",
         "  for id in Obras_final[a]:\n",
@@ -1468,14 +1469,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UjnVmut53PeW"
+        "id": "UjnVmut53PeW",
+        "outputId": "61eba0dc-54d6-4d89-9b4e-64407d9a21f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "import shutil\n",
         "shutil.make_archive('output', 'zip', '/content/output')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'/content/output.zip'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
     },
     {
       "cell_type": "markdown",
